--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "core-js": "^3.6.5",
         "register-service-worker": "^1.7.1",
         "sass": "^1.52.0",
-        "sass-loader": "^10.2.1",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
@@ -27,6 +26,8 @@
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
+        "node-sass": "^7.0.1",
+        "sass-loader": "^10.2.1",
         "vue-template-compiler": "^2.6.11"
     }
 }
