--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@auth0/auth0-vue": "^1.0.1",
         "axios": "^0.27.2",
+        "buefy": "^0.9.21",
         "core-js": "^3.6.5",
         "register-service-worker": "^1.7.1",
         "sass": "^1.52.0",
