--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.27.2",
         "buefy": "^0.9.21",
         "core-js": "^3.6.5",
+        "js-file-download": "^0.4.12",
         "register-service-worker": "^1.7.1",
         "sass": "^1.52.0",
         "vue": "^2.6.11",
